refactor: update package.json to reorganize workspaces and scripts
- Changed the order of workspaces to list frontend before backend.
- Added a directories field to specify examples directory.
- Renamed script commands for better clarity: 'watch:backend' to 'dev:backend' and 'watch:frontend' to 'dev:frontend'.

--- a/07-inteligencia-artificial/package.json
+++ b/07-inteligencia-artificial/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "directories": {
+    "example": "examples"
+  },
   "workspaces": [
-    "backend",
-    "frontend"
+    "frontend",
+    "backend"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch:backend": "npm run watch --workspace=backend",
-    "watch:frontend": "npm run dev --workspace=frontend"
+    "dev:backend": "npm run watch --workspace=backend",
+    "dev:frontend": "npm run dev --workspace=frontend",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
