--- a/07-inteligencia-artificial/frontend/package.json
+++ b/07-inteligencia-artificial/frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.1.1",
     "react-router": "^7.9.6",
     "snarkdown": "^2.0.0",
+    "streamdown": "^2.2.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
